ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__identifier.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"foo\")"
---
Expr {
    kind: Identifier(
        "foo",
    ),
    span: 0..3,
}
