ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__int.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"1\")"
---
Expr {
    kind: NumberLit(
        1.0,
    ),
    span: 0..1,
}
