ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__lambda-with-params.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"fn (x) {}\")"
---
Expr {
    kind: Lambda {
        inner_stmt: Stmt {
            kind: Lambda,
            span: 0..9,
        },
        params: [
            "x",
        ],
        body: [],
    },
    span: 0..9,
}
