ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__simple-escape-string.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(r#\"\"\\n\\t\\\\\"\"#)"
---
Expr {
    kind: StringLit(
        "\n\t\\",
    ),
    span: 0..8,
}
